--- a/front/next-demo/src/app/globals.css
+++ b/front/next-demo/src/app/globals.css
@@ -90,6 +90,10 @@ body {
     font-weight: 100;
   }
 
+button {
+      cursor: pointer;
+  }
+
 .dark {
   --sidebar: hsl(240 5.9% 10%);
   --sidebar-foreground: hsl(240 4.8% 95.9%);
