--- a/front/next-demo/src/app/parametres/parametre.module.css
+++ b/front/next-demo/src/app/parametres/parametre.module.css
@@ -3,6 +3,11 @@ body {
     padding: 0;
     color: #333;
 }
+
+.pagecontainer {
+    background-color: #FDFBF7;
+}
+
 .container {
   max-width: 900px;
   margin: 0 auto;
@@ -22,12 +27,13 @@ body {
 
 /* Card Styles */
 .settingsCard {
-  background: var(--card-bg);
+  /* background: var(--card-bg); */
   border-radius: var(--border-radius);
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   margin-bottom: 30px;
   overflow: hidden;
   border: 1px solid #eee;
+  backgroun-color: #FFF;
 }
 
 .settingsCard h2 {
