--- a/front/next-demo/src/app/bibliotheque/library.module.css
+++ b/front/next-demo/src/app/bibliotheque/library.module.css
@@ -1,42 +1,31 @@
 body {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  
 }
 
-/* HEADER 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 40px;
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.header-nav a {
-  margin-right: 40px;
-  text-decoration: none;
-  color: #333;
-  font-weight: 600;
-}
-*/
-
-/* LAYOUT */
-
-/* .container {
-  display: flex;
-  padding: 40px;
-  gap: 40px;
-} */
 
 /* SIDEBAR */
 .sidebar {
   width: 300px;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  height: 400px;
+  padding: 24px;
+  border-radius: 24px;
+  background-color: #ffffff; 
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 
+    0 10px 15px -3px rgba(0, 0, 0, 0.05), 
+    0 4px 6px -2px rgba(0, 0, 0, 0.03);
+  overflow: hidden;
+  transition: box-shadow 0.3s ease;
 }
 
+/* effet de flottement*/
+.sidebar:hover {
+  box-shadow: 
+    0 20px 25px -5px rgba(0, 0, 0, 0.08), 
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
 .sidebarTitle {
   font-size: 18px;
   font-weight: 600;
@@ -90,14 +79,6 @@ body {
   padding: 3px 14px;
 
 }
-
-/* .filterButton {
-  padding: 6px 14px;
-  border-radius: 20px;
-  border: 1px solid #ddd;
-  background: #fff;
-  cursor: pointer;
-} */
 
 .filterActive {
   background: #ff6b35;
@@ -169,26 +150,6 @@ body {
   font-weight: 500;
 }
 
-/* FOOTER 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 100px;
-  background: #fff;
-  margin-top: 80px;
-}
-
-.footer ul {
-  list-style: none;
-}
-
-.footer h4 {
-  margin-bottom: 8px;
-  font-size: 16px;  
-}
-*/
-
-
 .sidebar-menu-ul li button {
     display: flex;
     align-items: center;
@@ -219,7 +180,6 @@ body {
     border-radius: 8px;
     text-decoration: none;
     border: 2px solid #D97706;
-    
     
 }
 
