refactor: text status

--- a/front/next-demo/src/app/bibliotheque/Bibliotheque.html
+++ b/front/next-demo/src/app/bibliotheque/Bibliotheque.html
@@ -34,7 +34,7 @@
       <li class="active">📕 Toute ma bibliothèque</li>
       <li>🤍 Favoris</li>
       <li>📖 En cours</li>
-      <li>✔️ Lus</li>
+      <li>✔️ Lu</li>
     </ul>
   </aside>
 
@@ -46,7 +46,7 @@
     <!-- FILTER -->
     <div class="filter">
       <button class="active">Tous</button>
-      <button>Lus</button>
+      <button>Lu</button>
       <button>À lire</button>
     </div>
 
