--- a/front/next-demo/src/app/parametres/parametre.module.css
+++ b/front/next-demo/src/app/parametres/parametre.module.css
@@ -65,6 +65,10 @@ body {
   flex-direction: column;
 }
 
+.theme{
+  display: none;
+}
+
 /* Labels & Inputs */
 .label {
   font-size: 0.85rem;
@@ -150,6 +154,7 @@ body {
     font-size: 1.5rem;
   }
 
+  
   .settingsCard h2 {
     padding: 10px 14px;
   }
