--- a/front/next-demo/src/app/detail-livre/[slug]/details.module.css
+++ b/front/next-demo/src/app/detail-livre/[slug]/details.module.css
@@ -109,15 +109,29 @@ body {
     line-height: 1.6;
     color: #444;
 }
+
+
+.actions-container {
+
+    margin-top: auto; 
+    padding-top: 1rem; 
+    display: flex;
+    align-items: center;
+}
+
+
 @media screen and (max-width: 768px) {
+
     .book-card {
         flex-direction: column;
         align-items: flex-start;
     }
 
     .book-card img {
-        width: 100%;
-        height: auto;
+      width: 50%;
+    height: auto;
+    display: block; /* Important : les images sont "inline" par défaut */
+    margin: 0 auto;
     }
 
     .title-row {
